5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/226/users/4127/executions/1585_1014.log
== TEST (2019-03-21 11:59:05) 
-- CODE:
# Teste seu codigo aos poucos.
# Nao teste tudo no final, pois fica mais dificil de identificar erros.
# Nao se intimide com as mensagens de erro. Elas ajudam a corrigir seu codigo.
vendas=float(input("qual seu total de vendas em reais? "))
lucro=(vendas*30//100)
print(round(lucro,2))
-- OUTPUT:
210.0
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-21 11:59:17) 
-- CODE:
# Teste seu codigo aos poucos.
# Nao teste tudo no final, pois fica mais dificil de identificar erros.
# Nao se intimide com as mensagens de erro. Elas ajudam a corrigir seu codigo.
vendas=float(input("qual seu total de vendas em reais? "))
lucro=(vendas*30//100)
print(round(lucro,2))
-- EXECUTION TIME:
0.220139
-- TEST CASE 1:
---- input:
700.50
---- correct output:
210.15
---- user output:
210.0
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-23 14:01:33) 
-- CODE:
# Teste seu codigo aos poucos.
# Nao teste tudo no final, pois fica mais dificil de identificar erros.
# Nao se intimide com as mensagens de erro. Elas ajudam a corrigir seu codigo.
vendas=float(input("qual seu total de vendas em reais? "))
lucro=(vendas*30//100)
print(R$,round(lucro,2))
-- EXECUTION TIME:
0.153761
-- ERROR:
  File "/home/codebench/codes/1585/1014/main.py", line 6
    print(R$,round(lucro,2))
           ^
SyntaxError: invalid syntax

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-23 14:01:34) 
-- CODE:
# Teste seu codigo aos poucos.
# Nao teste tudo no final, pois fica mais dificil de identificar erros.
# Nao se intimide com as mensagens de erro. Elas ajudam a corrigir seu codigo.
vendas=float(input("qual seu total de vendas em reais? "))
lucro=(vendas*30//100)
print(R$,round(lucro,2))
-- ERROR:
File "XXXX", line 6
    print(R$,round(lucro,2))
           ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-23 14:01:42) 
-- CODE:
# Teste seu codigo aos poucos.
# Nao teste tudo no final, pois fica mais dificil de identificar erros.
# Nao se intimide com as mensagens de erro. Elas ajudam a corrigir seu codigo.
vendas=float(input("qual seu total de vendas em reais? "))
lucro=(vendas*30//100)
print(RS,round(lucro,2))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 6, in <module>
    print(RS,round(lucro,2))
NameError: name 'RS' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-23 14:01:43) 
-- CODE:
# Teste seu codigo aos poucos.
# Nao teste tudo no final, pois fica mais dificil de identificar erros.
# Nao se intimide com as mensagens de erro. Elas ajudam a corrigir seu codigo.
vendas=float(input("qual seu total de vendas em reais? "))
lucro=(vendas*30//100)
print(RS,round(lucro,2))
-- EXECUTION TIME:
0.172312
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1585/1014/main.py", line 6, in <module>
    print(RS,round(lucro,2))
NameError: name 'RS' is not defined

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-23 17:07:39) 
-- CODE:
venda=float(input("Qual seu total de vendas? "))
total=(30/100*venda)
print(total)
-- OUTPUT:
210.15
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-23 17:07:47) 
-- CODE:
venda=float(input("Qual seu total de vendas? "))
total=(30/100*venda)
print(total)
-- EXECUTION TIME:
0.127763
-- TEST CASE 1:
---- input:
700.50
---- correct output:
210.15
---- user output:
210.15
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
